@@ -1,3 +1,4 @@
+- adjust Uzbek locale (cf locales-uz change)
 - sort languages in "choose language" step in text mode
 - diskdrake:
   o drop "Undo", "Restore partition table", "Save partition table"
