@@ -1,3 +1,6 @@
+- localedrake:
+  o adjust Uzbek locale (cf locales-uz change)
+
 Version 10.5.7 - 6 December 2007, by Thierry Vignaud
 
 - handle new drivers: e1000e, snd-oxygen, snd-pcsp
